# 1c-zabbix-monitor_Windows_Linux

./: .env.example  .gitignore  1c_zabbix_monitor_windows_linux_cli.py  README.md  config.yaml  config.yaml.example  cspell.config.yaml  pyproject.toml  run_monitor.py
.cspell/: custom-dictionary.txt
src/1c-zabbix-monitor_Windows_Linux/: __main__.py  main.py
src/1c-zabbix-monitor_Windows_Linux/metrics/: __init__.py  calls.py  locks.py  log_errors.py  ras_health.py  rphost.py  sessions.py  slow_sql.py  utils_1c.py
